# trading-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 00_scope.md  01_context.md  02_layer_01_market_regime.md  02_workflow.md  03_acceptance.md  03_layer_02_sector_context.md  04_task.md  05_decision.md  06_memory.md  07_artifact.md  07_helpers.md  07_registry.md  08_manifest.md  08_registry.md  09_ready_signal.md  09_templates.md  10_request.md  80_task.md  81_decision.md  82_memory.md  90_helpers.md  91_layer_01_market_regime.md  91_registry.md  92_layer_02_sector_context.md  92_templates.md
helpers/: README.md
helpers/catalog/: README.md  catalog-reader.js  catalog-reader.test.js
helpers/python/: README.md
helpers/registry/: README.md  index.js  registry-reader.js  registry-reader.test.js  registry-types.js  secret-resolver.js
helpers/tests/: README.md  test_trading_registry.py
helpers/trading_registry/: README.md  __init__.py  payload_formats.py  reader.py  registry_types.py  secret_resolver.py
registry/: README.md  acceptance_outcome.md  artifact_types.md  config.md  current.csv  docs_status.md  field.md  fields.md  identifiers.md  maintenance_status.md  output.md  path.md  ready_signal_type.md  repo.md  request_types.md  review_readiness.md  script.md  statuses.md  task_lifecycle_state.md  term.md  test_status.md
registry/kinds/: field.md  (+25 more)
scripts/: README.md  apply_registry_migrations.py  current.csv
src/: README.md
storage/: README.md
templates/: README.md
tests/: README.md  test_trading_bigquery.py  test_trading_registry.py
(+314 files in other folders)
